# 55-scd-topology-checker

./: Cargo.toml  README.md
examples/: stress_test.rs
src/: lib.rs  main.rs
src/graph/: digraph.rs  mod.rs  scc.rs  topology.rs  toposort.rs
src/model/: types.rs
src/parser/: streaming.rs
src/validator/: isolation.rs  mod.rs
testdata/: sample_substation.scd  timing_long_chain.scd
